# docs-thing

./: .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  build.js  drizzle.config.ts  go.mod  go.sum  go.work  go.work.sum  package-lock.json  package.json  rs.vercel.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
api/: go.mod  go.sum  go.work.sum  index.go  pdf.go  png.go  test.rs
api/_pkg/: data.go  pdf.go  static.go
api/data/: data.go
api/static/: static.go
drizzle/: 0000_free_hiroim.sql  0001_material_lizard.sql  0002_regular_nekra.sql  0003_cool_hannibal_king.sql  0004_fair_whirlwind.sql  0005_lovely_vindicator.sql  0006_square_lethal_legion.sql  0007_majestic_sway.sql  0008_ambitious_meltdown.sql  0009_closed_hulk.sql  0010_orange_true_believers.sql  0011_whole_night_nurse.sql  0012_greedy_ben_parker.sql  0013_mysterious_jetstream.sql  0014_majestic_moon_knight.sql  0015_slippery_kate_bishop.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  _journal.json
src/: app.css  app.html
src/components/: Button.svelte  Sidebar.svelte
src/components/form/: TextInput.svelte
src/components/shared/: Image.svelte  Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte  styles.css
src/utils/: migrate.ts
static/: manifest.json
(+26 files in other folders)
